# Chottu-Version-2.0

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  pearl_model_validation.yml
.github/workflows/: build-chottu.yml  build.yml  ci.yml  claude-issues.yml  docs.yml  installer-integration.yml  pypi-publish.yml
configs/Chottu/: config.toml
deploy/docker/: .env.example  Dockerfile  Dockerfile.gpu  Dockerfile.gpu.rocm  Dockerfile.sandbox  docker-compose.gpu.nvidia.yml  docker-compose.gpu.rocm.yml  docker-compose.yml
deploy/launchd/: com.Chottu.plist
deploy/posthog/: posthog-hetzner-prep.sh
deploy/systemd/: Chottu.service
deploy/windows/: Chottu-service.ps1  README.md  install.ps1
docs/: desktop-auto-update.md  downloads.md  gen_install_script.py  index.md  leaderboard.md  telemetry.md
docs/architecture/: agents.md  channels.md  design-principles.md  engine.md  intelligence.md  learning.md  memory.md  overview.md  query-flow.md  security.md  skills.md
docs/deployment/: api-server.md  docker.md  index.md  launchd.md  systemd.md
docs/design/: 2026-05-05-apple-silicon-pearl-mining-design.md  2026-05-05-apple-silicon-pearl-mining-plan-v1.md  2026-05-05-pearl-coordination-discussion-draft.md  2026-05-05-vllm-pearl-mining-integration-design.md  (+1 more)
docs/development/: contributing.md  mining.md  (+4 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
rust/: Cargo.toml  rust-toolchain.toml
rust/crates/openjarvis-agents/: Cargo.toml
rust/crates/openjarvis-agents/src/: helpers.rs  monitor_operative.rs  native_openhands.rs  native_react.rs  orchestrator.rs  simple.rs  traits.rs  utils.rs
rust/crates/openjarvis-learning/: Cargo.toml
rust/crates/openjarvis-learning/src/: agent_evolver.rs  bandit.rs  grpo.rs  heuristic.rs  learning_orchestrator.rs  orchestrator_types.rs  reward.rs  router_enum.rs  training_data.rs  traits.rs
rust/crates/openjarvis-learning/src/optimize/: engine.rs  llm_optimizer.rs  mod.rs  search_space.rs  store.rs  types.rs
rust/crates/openjarvis-mcp/: Cargo.toml
rust/crates/openjarvis-mcp/src/: server.rs
rust/crates/openjarvis-python/: Cargo.toml  pyproject.toml
rust/crates/openjarvis-python/src/: a2a.rs  agents.rs  core.rs  engine.rs  learning.rs  lib.rs  mcp.rs  recipes.rs  scheduler.rs  security.rs  sessions.rs  skills.rs  storage.rs  telemetry.rs  templates.rs  tools.rs  traces.rs  workflow.rs
scripts/: index_docs.py  oauth_all.py  quickstart.sh  smoke_framework_comparison.sh
tests/: conftest.py  test_digest_integration.py  test_query_orchestrator.py
(+1521 files in other folders)
