[package]
name = "Chottu-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
Chottu-core = { path = "../Chottu-core" }
Chottu-tools = { path = "../Chottu-tools" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
